Completed the about section, added the news section and added the clients section. Used the new btn-regular class

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                                     Performance-driven digital and technology services <br>
                                     with complete transparency.
                                 </p>                    
-                                <a href="#" class="btn btn-tertiary">
-                                    Find out more <i class="fas fa-arrow-right"></i>
+                                <a href="#" class="btn btn-software">
+                                    Contact Us <i class="fas fa-arrow-right"></i>
                                 </a>
                             </div>
                         </div>                        
@@ -151,7 +151,7 @@
                     <div class="col-12">
                         <div class="heading">
                             <h2 class="title">Our Services</h2>
-                            <h3 class="link"><a href="#">View All <i class="fas fa-arrow-right"></i></a></h3>
+                            <h4 class="link"><a href="#">View All <i class="fas fa-arrow-right"></i></a></h4>
                         </div>                        
                     </div>                    
                 </div>
@@ -161,7 +161,7 @@
                             <i class="fas fa-bars"></i>
                             <h2>Bespoke Software</h2>
                             <p>Bespoke software solutions for all your business needs including integrations and reporting.</p>
-                            <span class="btn btn-services" href="#">Read more</span>
+                            <span class="btn btn-regular" href="#">Read more</span>
                         </a>
                     </div>
                     <div class="col-4">
@@ -169,7 +169,7 @@
                             <i class="fas fa-tv"></i>
                             <h2>IT Support</h2>
                             <p>Fully managed IT support and consultancy packages tailored to meet your exact business needs.</p>
-                            <span class="btn btn-services" href="#">Read more</span> 
+                            <span class="btn btn-regular" href="#">Read more</span> 
                         </a>
                     </div>
                     <div class="col-4">
@@ -177,7 +177,7 @@
                             <i class="fas fa-signal"></i>
                             <h2>Digital Marketing</h2>
                             <p>Driven brand awareness & ROI through creative digital marketing campaigns.</p>
-                            <span class="btn btn-services" href="#">Read more</span>       
+                            <span class="btn btn-regular" href="#">Read more</span>       
                         </a> 
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                             <i class="fas fa-phone-alt"></i>
                             <h2>Telecoms Services</h2>
                             <p>Business telephony solutions including mobile & connectivity solutions.</p>
-                            <span class="btn btn-services" href="#">Read more</span>
+                            <span class="btn btn-regular" href="#">Read more</span>
                         </a>
                     </div>
                     <div class="col-3">
@@ -196,7 +196,7 @@
                             <i class="fas fa-code"></i>
                             <h2>Web Design</h2>
                             <p>User-centric design for businesses looking to make a lasting impression.</p>
-                            <span class="btn btn-services" href="#">Read more</span>        
+                            <span class="btn btn-regular" href="#">Read more</span>        
                         </a>
                     </div>
                     <div class="col-3">
@@ -204,7 +204,7 @@
                             <i class="fas fa-shield-alt"></i>
                             <h2>Cyber Security</h2>
                             <p>Prevention, testing, consultancy & breach management services.</p>
-                            <span class="btn btn-services" href="#">Read more</span>
+                            <span class="btn btn-regular" href="#">Read more</span>
                         </a>  
                     </div>
                     <div class="col-3">
@@ -212,7 +212,7 @@
                             <i class="fas fa-graduation-cap"></i>
                             <h2>Developer Training</h2>
                             <p>Web design & software training courses designed to secure a job in tech.</p>
-                            <span class="btn btn-services" href="#">Read more</span>                            
+                            <span class="btn btn-regular" href="#">Read more</span>                            
                         </a>     
                     </div>
                 </div>
@@ -266,17 +266,136 @@
                             <p><strong>Netmatters is a leading <a href="#">Bespoke Software</a>, <a href="#">IT Support</a>, and <a href="#">Digital Marketing</a> company based in the East of England with offices in <a href="#">Cambridge</a>, <a href="#">Wymondham</a>, and <a href="#">Great Yarmouth</a>.</strong></p>
                             <p>We aren't tied into contracts with third-party providers, so you know that our recommendations for your business are based purely with one benefit in mind: to help improve your business with the most appropriate solutions.</p>                        
                             <p>We pride ourselves on being an ethical business and have a unique business offering and cost model that ensures you get the most from our relationship in an upfront manner.</p>
+                            <a href="#" class="btn btn-welcome">
+                                Read more<i class="fas fa-arrow-right btn-i-last"></i>
+                            </a>
+
                         </div>                       
                     </div>
                     <div class="col-6">
                         <div class="inner">
                             <h2>What Our Clients Think</h2>
-                            <p class="client-quote">Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!</p>
+                            <p class="five-star">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </p>    
+                            <p class="client-testimonial">Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!</p>
+                            <p class="client-name">Eleanor Bishop, Head of Marketing - Ashcroft Partnership LLP</p>
+
+                            <a href="#" class="btn btn-sec">
+                                Google Reviews <i class="fas fa-arrow-right btn-i-last"></i>
+                            </a>
+                            <a href="#" class="btn btn-trust">
+                                Trustpilot Reviews <i class="fas fa-arrow-right btn-i-last"></i>
+                            </a>
+
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
+        <!-- News -->
+        <div class="news">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="heading">
+                            <h3 class="title">Latest News</h3>
+                            <h4 class="link"><a href="#">View All <i class="fas fa-arrow-right"></i></a></h4>
+                        </div>                        
+                    </div>                    
+                </div>
+                <div class="row">
+                    <div class="col-4">                        
+                        <a href="#" class="card card-gray news-item">                   
+                            <img src="images/business-automation-take-sqif.webp">    
+                            <span data-url="#" class="btn btn-flag">News</span>                            
+                            <div class="news-wrap">
+                                <h4>Business Automation: Take Your Business to th...</h4>
+                                <p>In this article we explain everything you need to know about business automation, and why your busin...</p>
+                                <span class="btn btn-regular" href="#">Read more</span>
+                                <div class="author">
+                                    <div class="avatar">
+                                        <img src="images/netmatters-logo-square.png" class="img-responsive" alt="Netmatters ">
+                                    </div>
+                                    <div class="info">
+                                        <strong>Posted by Netmatters </strong><br>
+                                        28th October 2022
+                                    </div>
+                                </div>
+                            </div>    
+                        </a>
+                    </div>
+                    <div class="col-4">
+                        <a class="card card-green news-item"> 
+                            <img src="images/6-steps-you-wOc3.webp">
+                            <span data-url="#" class="btn btn-flag">News</span>   
+                            <div class="news-wrap">
+                                <h4>6 Steps You Can Do to Make Your Website More...</h4>
+                                <p>Making your website visible on Google is one of the most important factors in getting leads through...</p>
+                                <span class="btn btn-regular" href="#">Read more</span>
+                                <div class="author">
+                                    <div class="avatar">
+                                        <img src="images/netmatters-logo-square.png" class="img-responsive" alt="Netmatters ">
+                                    </div>
+                                    <div class="info">
+                                        <strong>Posted by Netmatters </strong><br>
+                                        28th October 2022
+                                    </div>
+                                </div>
+                            </div>
+                        </a> 
+                    </div>
+                    <div class="col-4">
+                        <a class="card card-gray news-item">                            
+                            <img src="images/improving-efficiency-with-BLNT.webp">
+                            <span data-url="#" class="btn btn-flag">Case Studies</span>   
+                            <div class="news-wrap">
+                                <h4>Improving Efficiency With a Bespoke Software...</h4>
+                                <p>At Netmatters we have a proven track record of building software solutions that improves the efficie...</p>
+                                <span class="btn btn-regular" href="#">Read more</span>
+                                <div class="author">
+                                    <div class="avatar">
+                                        <img src="images/netmatters-logo-square.png" class="img-responsive" alt="Netmatters ">
+                                    </div>
+                                    <div class="info">
+                                        <strong>Posted by Netmatters </strong><br>
+                                        28th October 2022
+                                    </div>
+                                </div>
+                            </div>    
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Clients -->
+        <div class="clients">
+            <div class="container">
+                <row>    
+                    <div class="col-12">                        
+                        <div class="client-strip">
+                            <div class="client">
+                                <img src="images/busseys.png" alt="Google Partner">
+                            </div>
+                            <div class="client">
+                                <a href="#"><img src="images/crane.png" alt="Investing in the future of growth"></a>
+                            </div>
+                            <div class="client">
+                                <img src="images/beat.png" alt="Norfolk Carbon Chartser">
+                            </div>   
+                            <div class="client">
+                                <a href="#"><img src="images/northern-diver.png" alt="Norfolk Carbon Charter"></a>
+                            </div>   
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Footer -->
