--- a/index.html
+++ b/index.html
@@ -398,6 +398,42 @@
             </div>
         </div>
 
+        <!-- Newsletter -->
+        <div class="newsletter">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="inner">
+                            <h2>Email Newsletter Sign-Up</h2>
+                            <div class="input-fields">
+                                <div class="form-group">
+                                    <label for="name" class="required">Your Name</label>
+                                    <input type="text" name="name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email" class="required">Your Email</label>
+                                    <input type="email" name="email">
+                                </div>
+                            </div>
+   
+                            <div class="checkbox-field">
+                                <div class="element">
+                                    <input type="checkbox" id="opt-in" name="opt-in" class="opt-in">
+                                </div>
+                                <div class="description">
+                                    <label for="opt-in">Please tick this box if you wish to receive marketing information from us. Please see our Privacy Policy for more information on how we keep your data safe.</label>
+                                </div>
+                            </div>
+
+                            <a href="#" class="btn btn-welcome btn-regular">
+                                Read more
+                            </a>
+
+                        </div>                       
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Footer -->
         <div class="container"></div>
     </body>
