add sub menu items

--- a/index.html
+++ b/index.html
@@ -58,14 +58,36 @@
                                         <div class="container">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <h4>This is a test</h4>
-                                                    <ul class="">
-                                                        <li>test</li>
+                                                    <h2>Our Bespoke Software Services</h2>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Workflow</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Apps</a></li>     
+                                                        <li><a href="#"><i class="fas fa-code"></i>Management</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Intranet Development</a></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Automation</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Database</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Business Central</a></li>                                                        
+                                                        <li><a href="#"><i class="fas fa-code"></i>Customer Portal Development</a></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Integration</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>SharePoint</a></li>                               
+                                                        <li><a href="#"><i class="fas fa-code"></i>Internet of Things</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Reporting Hub</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
+
                                 </li>
                                 <li class="nav__item">
                                     <a href="#" class="support">                            
@@ -74,8 +96,33 @@
                                         Support
                                     </a>
                                     <div class="mega-menu">
-                                        this is a temp content
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <h2>Our IT Support Services</h2>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Managed IT</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Consultancy</a></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Business IT</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Cloud Provider</a></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Office 365</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Data Backup</a></li>                               
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
+
                                 </li>
                                 <li class="nav__item">
                                     <a href="#" class="marketing">
@@ -84,8 +131,33 @@
                                         Marketing
                                     </a>
                                     <div class="mega-menu">
-                                        this is a temp content
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <h2>Our Digital Marketing Services</h2>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Search (SEO)</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Email</a></li>     
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Paid (PPC)</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Social Media</a></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Conversion (CRO)</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Content</a></li>                               
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
+
                                 </li>
                                 <li class="nav__item">
                                     <a href="#" class="services">                            
@@ -94,7 +166,31 @@
                                         Services
                                     </a>
                                     <div class="mega-menu">
-                                        this is a temp content
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <h2>Our Telecoms Services</h2>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Business Mobile</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Business Broadband</a></li>     
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Hosted VoIP</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Leased Line</a></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Business VoIP</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>3CX Systems</a></li>                               
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </li>
                                 <li class="nav__item">
@@ -104,7 +200,31 @@
                                         Design
                                     </a>
                                     <div class="mega-menu">
-                                        this is a temp content
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <h2>Our Web Design Services</h2>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Stylish Websites</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Apps</a></li>     
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>eCommerce Stores</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Web Hosting</a></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Branding</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Pay Monthly Websites</a></li>                               
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </li>
                                 <li class="nav__item">
@@ -114,7 +234,31 @@
                                         Security
                                     </a>
                                     <div class="mega-menu">
-                                        this is a temp content
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <h2>Our Cyber Security Services</h2>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Assessment</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Cyber Essentials</a></li>     
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Management</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>PCI/DSS</a></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Penetration Testing</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Hacker Prevention</a></li>                               
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </li>
                                 <li class="nav__item">
@@ -127,9 +271,22 @@
                                         <div class="container">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <h2>This is a test</h2>
-                                                    <ul class="">
-                                                        <li>test</li>
+                                                    <h2>Our Developer Course Services</h2>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Train For A Career In Tech</a></li>
+                                                        <li><a href="#"><i class="fas fa-code"></i>Scion Collaborators</a></li>     
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Skills Bootcamp</a></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="col-4">
+                                                    <ul class="sub-menu">
+                                                        <li><a href="#"><i class="fas fa-code"></i>Scion Scheme Frequently Asked Questions</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -184,7 +341,7 @@
         </div>
 
         <!-- Services -->
-        <div class="services">
+        <div class="our-services">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
