replaced icon for the first nav item

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <ul class="nav">
                                 <li class="nav__item">
                                     <a href="#" class="software">                            
-                                        <i class="fas fa-bars"></i><br>
+                                        <i class="fas fa-th"></i><br>
                                         <small>Bespoke</small><br>
                                         Software
                                     </a>
