add search bar element

--- a/index.html
+++ b/index.html
@@ -298,6 +298,18 @@
                     </nav>
                 </div>
             </div>
+            <div class="searchbar">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <input  placeholder="Search..."  name="keyword" type="text" value="" class="keyword">
+                            <button type="submit" class="btn">
+                                <i class="fas fa-search" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>        
         </header>         
 
         <!-- Slideshow -->
@@ -622,7 +634,7 @@
                             </div>
 
                             <a href="#" class="btn btn-welcome btn-regular">
-                                Read more
+                                Subscribe
                             </a>
 
                         </div>                       
