--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <div class="topbar">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4">
+                        <div class="col-md-5 col-lg-4">
                             <a class="site-logo" href="/">
                                 <b class="srt">Netmatters</b>
                             </a>
                         </div>
-                        <div class="col-lg-8">
+                        <div class="col-md-7 col-lg-8">
                             <div class="topbar-links">
                                 <a href="#" class="btn btn-sec btn-support">
                                     <i class="fa fa-mouse"></i> 
@@ -33,6 +33,13 @@
                                     <i class="fas fa-search"></i>
                                     <b class="srt">Search</b>
                                 </a>
+                                <div class="btn-search-input">
+                                    <input  placeholder="Search..."  name="keyword" type="text" value="" class="keyword input-field">
+                                    <a href="#" class="btn btn-def">                                       
+                                        <i class="fas fa-search"></i>
+                                        <b class="srt">Search</b>
+                                    </a>
+                                </div>                                
                                 <a href="#" class="btn btn-prim btn-toggle">
                                     <span class="hamburger">
                                         <b class="srt">Toggle</b>
@@ -616,11 +623,11 @@
                             <div class="input-fields">
                                 <div class="form-group">
                                     <label for="name" class="required">Your Name</label>
-                                    <input type="text" name="name">
+                                    <input type="text" name="name" class="input-field">
                                 </div>
                                 <div class="form-group">
                                     <label for="email" class="required">Your Email</label>
-                                    <input type="email" name="email">
+                                    <input type="email" name="email"  class="input-field">
                                 </div>
                             </div>
    
