--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <div class="topbar">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-5 col-lg-4">
+                        <div class="col-8 col-sm-7 col-md-5 col-lg-4">
                             <a class="site-logo" href="/">
                                 <b class="srt">Netmatters</b>
                             </a>
                         </div>
-                        <div class="col-md-7 col-lg-8">
+                        <div class="col-4 col-sm-5 col-md-7 col-lg-8">
                             <div class="topbar-links">
                                 <a href="#" class="btn btn-sec btn-support">
                                     <i class="fa fa-mouse"></i> 
@@ -31,6 +31,10 @@
                                 </a>
                                 <a href="#" class="btn btn-def btn-search">
                                     <i class="fas fa-search"></i>
+                                    <b class="srt">Search</b>
+                                </a>
+                                <a href="#" class="btn btn-prim-inv btn-call">
+                                    <i class="fas fa-phone-alt"></i>
                                     <b class="srt">Search</b>
                                 </a>
                                 <div class="btn-search-input">
