improved the responsivenes of the footer section columns

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                     </div>                    
                 </div>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-lg-4">
                         <a class="card card-software">
                             <i class="fas fa-bars"></i>
                             <h2>Bespoke Software</h2>
@@ -383,7 +383,7 @@
                             <span class="btn btn-regular" href="#">Read more</span>
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4">
                         <a class="card card-support">
                             <i class="fas fa-tv"></i>
                             <h2>IT Support</h2>
@@ -391,7 +391,7 @@
                             <span class="btn btn-regular" href="#">Read more</span> 
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4">
                         <a class="card card-marketing"> 
                             <i class="fas fa-signal"></i>
                             <h2>Digital Marketing</h2>
@@ -402,7 +402,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-12 col-md-6 col-xl-3">
                         <a class="card card-services">
                             <i class="fas fa-phone-alt"></i>
                             <h2>Telecoms Services</h2>
@@ -410,7 +410,7 @@
                             <span class="btn btn-regular" href="#">Read more</span>
                         </a>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-md-6 col-xl-3">
                         <a class="card card-design">
                             <i class="fas fa-code"></i>
                             <h2>Web Design</h2>
@@ -418,7 +418,7 @@
                             <span class="btn btn-regular" href="#">Read more</span>        
                         </a>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-md-6 col-xl-3">
                         <a class="card card-security"> 
                             <i class="fas fa-shield-alt"></i>
                             <h2>Cyber Security</h2>
@@ -426,7 +426,7 @@
                             <span class="btn btn-regular" href="#">Read more</span>
                         </a>  
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-md-6 col-xl-3">
                         <a class="card card-training"> 
                             <i class="fas fa-graduation-cap"></i>
                             <h2>Developer Training</h2>
@@ -479,7 +479,7 @@
         <div class="about">
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-lg-6">
                         <div class="inner">
                             <h2>Welcome to Netmatters</h2>
                             <p><strong>Netmatters is a leading <a href="#">Bespoke Software</a>, <a href="#">IT Support</a>, and <a href="#">Digital Marketing</a> company based in the East of England with offices in <a href="#">Cambridge</a>, <a href="#">Wymondham</a>, and <a href="#">Great Yarmouth</a>.</strong></p>
@@ -491,7 +491,7 @@
 
                         </div>                       
                     </div>
-                    <div class="col-6">
+                    <div class="col-lg-6">
                         <div class="inner">
                             <h2>What Our Clients Think</h2>
                             <p class="five-star">
@@ -528,8 +528,8 @@
                         </div>                        
                     </div>                    
                 </div>
-                <div class="row">
-                    <div class="col-4">                        
+                <div class="row news-items">
+                    <div class="col-md-6 col-xl-4">                        
                         <a href="#" class="card card-gray news-item">                   
                             <img src="images/business-automation-take-sqif.webp">    
                             <span data-url="#" class="btn btn-flag">News</span>                            
@@ -549,7 +549,7 @@
                             </div>    
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-6 col-xl-4">
                         <a class="card card-green news-item"> 
                             <img src="images/6-steps-you-wOc3.webp">
                             <span data-url="#" class="btn btn-flag">News</span>   
@@ -569,7 +569,7 @@
                             </div>
                         </a> 
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-6 col-xl-4">
                         <a class="card card-gray news-item">                            
                             <img src="images/improving-efficiency-with-BLNT.webp">
                             <span data-url="#" class="btn btn-flag">Case Studies</span>   
